@@ -11,6 +11,7 @@ import Bob_BE.domain.menu.dto.request.MenuRequestDto.MenuCreateRequestDto.Create
 import Bob_BE.domain.menu.dto.response.MenuResponseDto;
 import Bob_BE.domain.menu.entity.Menu;
 import Bob_BE.domain.menu.repository.MenuRepository;
+import Bob_BE.domain.operatingHours.entity.OperatingHours;
 import Bob_BE.domain.owner.entity.Owner;
 import Bob_BE.domain.owner.repository.OwnerRepository;
 import Bob_BE.domain.owner.service.OwnerService;
@@ -20,7 +21,6 @@ import Bob_BE.domain.store.converter.StoreConverter;
 import Bob_BE.domain.store.dto.request.StoreRequestDto;
 import Bob_BE.domain.store.dto.response.StoreResponseDto;
 import Bob_BE.domain.store.dto.parameter.StoreParameterDto;
-import Bob_BE.domain.store.dto.response.StoreResponseDto.GetStoreSearchDto;
 import Bob_BE.domain.store.entity.Store;
 import Bob_BE.domain.store.repository.StoreRepository;
 import Bob_BE.domain.storeUniversity.entity.StoreUniversity;
@@ -34,6 +34,8 @@ import Bob_BE.domain.storeUniversity.service.StoreUniversityService;
 import Bob_BE.global.response.code.resultCode.ErrorStatus;
 import Bob_BE.global.response.exception.GeneralException;
 import Bob_BE.global.response.exception.handler.*;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.annotation.Cacheable;
 
 import Bob_BE.global.util.JwtTokenProvider;
 import Bob_BE.global.util.aws.S3StorageService;
@@ -42,7 +44,6 @@ import java.security.SignatureException;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
@@ -52,8 +53,6 @@ import java.util.Map;
 import Bob_BE.global.util.google.GoogleCloudOCRService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.geo.Distance;
 import org.springframework.data.geo.Metrics;
 import org.springframework.data.geo.Point;
@@ -90,7 +89,6 @@ public class StoreService {
 
     @Autowired
     private final RedisTemplate<String, Object> redisTemplate;
-
 
 
     @Transactional
@@ -261,7 +259,7 @@ public class StoreService {
 
         List<Store> storeList = storeUniversityList.stream()
                 .map(StoreUniversity::getStore)
-                .collect(Collectors.toList());
+                .toList();
 
         return storeList.stream()
                 .map(store -> {
@@ -308,7 +306,7 @@ public class StoreService {
                             return StoreConverter.toStoreDataDto(store, menu, 0);
                         }
                     }
-                }).toList();
+                }).collect(Collectors.toList());
     }
   
     /**
@@ -405,7 +403,6 @@ public class StoreService {
                 .toList();
     }
 
-
     public void saveAllStoreLocationsToRedis(){
         List<Store> stores = storeRepository.findAll();
         String key = "locations";
@@ -413,6 +410,9 @@ public class StoreService {
         for (Store store : stores){
             redisTemplate.opsForGeo().add(key, new Point(store.getLongitude(), store.getLatitude()), "store:"+store.getId());
         }
+    }
+    public Store getStore(Long storeId){
+        return storeRepository.findById(storeId).orElseThrow(() -> new StoreHandler(ErrorStatus.STORE_NOT_FOUND));
     }
 
     private double calculateDistance(double lat1, double lon1, double lat2, double lon2) {
@@ -424,5 +424,39 @@ public class StoreService {
                 * Math.sin(lonDistance / 2) * Math.sin(lonDistance / 2);
         double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
         return R * c;
+    }
+
+    public String getStoreBannerUrl(Store store){
+        String bannerUrl = null;
+        if(store.getBanner() != null) {
+            Banner storeBanner = bannerRepository.findByStore(store);
+            bannerUrl = storeBanner.getBannerUrl();
+        }
+
+
+        return bannerUrl;
+    }
+
+    public University getStoreUniversity(Store store){
+        StoreUniversity storeUniversity = storeUniversityRepository.findByStoreId(store.getId()).orElseThrow(()-> new UniversityHandler(ErrorStatus.STORE_UNIVERSITY_NOT_FOUND));
+
+        return  storeUniversity.getUniversity();
+    }
+
+    public List<OperatingHours> getOperatingHours(Long storeId){
+        Store store = storeRepository.findById(storeId).orElseThrow(()-> new StoreHandler(ErrorStatus.STORE_NOT_FOUND));
+        return store.getOperatingHoursList();
+    }
+
+    public List<Menu> getStoreMenu(Long storeId){
+        Store store = storeRepository.findById(storeId).orElseThrow(()->new StoreHandler(ErrorStatus.STORE_NOT_FOUND));
+
+        return store.getMenuList();
+    }
+
+    public SignatureMenu getSignatureMenu(Long storeId){
+        Store store = storeRepository.findById(storeId).orElseThrow(()->new StoreHandler(ErrorStatus.STORE_NOT_FOUND));
+
+        return store.getSignatureMenu();
     }
 }
